[package]
name = "first-fm"
version = "0.1.0"
authors = ["xenzh <xenzh0@gmail.com>"]

[dependencies]
url = "1.*"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
native-tls = "0.1"
tokio-tls = "0.1"
lastfm-parse-rs = { git = "https://github.com/xenzh/lastfm-parse-rs" }
async-http-client = { git = "https://github.com/xenzh/async-http-client" }

[dev-dependencies]
open = "1.2"